--- a/PlanIFYweb/PlanIFYweb/static/css/main.css
+++ b/PlanIFYweb/PlanIFYweb/static/css/main.css
@@ -1,11 +1,18 @@
+
 div.header-container{
-    background-color: rgba(0, 153, 255, 0.705);
-    padding-top: 1px;
+    background-color: rgb(0, 174, 255);;
+    padding-top: 10px;
     padding-bottom: 1px;
     }
 div.nav-bar{
     background-color: rgb(0, 174, 255);;
-    padding: 14px 16px;
+    padding-bottom: 20px;
+    position:fixed;
+    top: 0;
+    width: 100%;
+    overflow: hidden;
+    z-index: 1;
+    
 }
 a.navlink{
     font-size: 16px;
@@ -33,12 +40,20 @@ a.logout-btn:hover{
     background-color: rgb(255, 0, 0);
     left: 0;
 }
-.option-div{
-    background-color: green;
+
+/*New event button on home page*/
+.filler{
+    margin-top: 50px;
 }
-.new-event-div{
+.filler-text{
+    color: white;
+}
+.action-button-list{
+    background-color: aliceblue;
+}
+.new-event-button{
     width: 150px;
-    height: 100px;
+    height: 50px;
     border-radius: 10px;
     border: 2px solid rgb(25, 223, 75);
     background-color: rgb(47, 255, 106);
@@ -47,53 +62,121 @@ a.logout-btn:hover{
     margin-top: 1%;
     margin-left: 1%;
 }
-.new-event-div:hover{
+.new-event-button:hover{
     background-color: rgb(47, 238, 26);
 }
-.new-event-div-outter{
-    width: 150;
-    height: 150;
-    
-}
-.modal{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    border: 1px solid black;
-    border-radius: 10px;
-    width: 700;
-    height: 400;
-    background-color: white;
-    transform: translate(-50%, -50%);
-}
-.modal-body{
 
-    padding: 10px 15px;
-}
-.overlay{
-    position: fixed;
-    opacity: 1;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    
-}
 
-.overlay.active{
-    opacity: 0;
-    pointer-events: all;
-}
-.event-name{
-    text-align: center;
-}
-.modal-btn{
-    margin-top: 10px;
-    margin-bottom: 20px;
-    width: 150px;
-}
+/*Home page event list*/
 .event-table{
     border: 1px solid;
 }
 td {
     border: 1px solid;
 }
+.event-lists{
+columns: auto;
+column-width:auto;
+column-gap: 0;
+padding-top: 2%;
+
+
+}
+.title{
+    padding-top: 5px;
+}
+
+.new-event-dialog{
+    border-radius: 5px;
+}
+
+
+/*Event cards*/
+.athlete-list{
+    border-color: black solid;
+    display:inline-block;
+}
+
+.host-list{
+    display: inline-block;
+}
+
+.vendor-list{
+    display: inline-block;
+}
+.event-div{
+    width: 550px;
+    height: 300px;
+    overflow: hidden;
+    background: white;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    position: relative; 
+    border-radius: 8px;
+    margin-top: 15px;
+    margin-right: 15px;
+    margin-left: 15px;
+    }
+.event-div:hover{
+        box-shadow: 0 0 15px rgba(0,200,0,0.8);
+        }
+.event-div img {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
+    }
+.event-div h2 {
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+    }
+.event-div p {
+    font-size: 12px;
+    opacity: .7;
+    margin: 0;
+    }
+.event-div .event-info-div {
+    padding: 16px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    position: relative;
+    }
+.event-info-div .event-host {
+    position: absolute;
+    right: 16px;
+    top: -20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    }
+ 
+.event-link {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    }
+
+    /* Tables for various things */
+    .delete-btn{
+        background-color: rgba(200, 0, 0, 0.5);
+        border-radius: 5px;
+    }
+
+    .update-btn{
+        background-color: rgba(0, 200, 0, 0.9);
+        border-radius: 5px;
+    }
+
+    .delete-btn:hover{
+        background-color: rgba(255, 0, 0, 0.5);
+    }
+
+    .update-btn:hover{
+        background-color: rgba(0, 255, 0, 0.9);
+    }
+
+    .event-input-form{
+        columns: 5;
+    }
