--- a/PlanIFYweb/PlanIFYWOD/templates/PlanIFYweb/hostevent.html
+++ b/PlanIFYweb/PlanIFYWOD/templates/PlanIFYweb/hostevent.html
@@ -6,7 +6,7 @@
         <h1 class="filler-text">filler</h1>
     </div>
     <div class="event-input-form">
-        <form action="" method="POST">
+        <form action="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{form.as_p}}
             
@@ -49,7 +49,7 @@
 
 
     <dialog class="workout-dialog" id="workout-dialog">
-        <form action="" method="post">
+        <form action="" method="post" enctype="multipart/form-data">
             <h3>Select the workout Type:</h3>
             {% csrf_token %}
             {{ form2.as_p }}
