--- a/PlanIFYweb/PlanIFYWOD/templates/PlanIFYweb/navbar.html
+++ b/PlanIFYweb/PlanIFYWOD/templates/PlanIFYweb/navbar.html
@@ -8,7 +8,13 @@
     </head>
     
         <div class="nav-bar">
-            <a href="{% url 'Profile' user=user%}" class="navlink">{{ user }}</a>
+            <a href="{% url 'Profile' user=user%}" class="navlink">{{ user }}
+                {% if profile_pic %}
+                    <img src="media/{{ img }}" class="profile-pic" />
+                {% else %}
+                <img src="{% static '/media/images/generic_avatar.png'  %}" class="profile-pic" />
+                {% endif %}
+            </a>
             <a href="{% url 'Home' %}" class="navlink">Home</a>
             <a href="{% url 'SignOut' %}" class="logout-btn" class="navlink">Logout</a>
             <header>
