--- a/PlanIFYweb/PlanIFYWOD/templates/PlanIFYweb/search.html
+++ b/PlanIFYweb/PlanIFYWOD/templates/PlanIFYweb/search.html
@@ -2,20 +2,25 @@
 {% load static %}
 {% block content %}
 <body>
-<div class="search-bar">
-    <input type="text" class="search-box">
-    <input type="button" class="search-btn">
-</div>
-
-<div class="search-results-area">
-<!--search results here-->
-    <div>
-        <h4>Location: </h4>
-        <h4>Date: </h4>
-        <h4>Price: </h4>
+    <div class="filler">
+        <h1 class="filler-text">filler</h1>
+    </div>
+    <div class="search-bar">
+        <input type="text" class="search-box" placeholder="Search">
+        <input type="button" class="search-btn" value="SEARCH">
     </div>
 
-</div>
+    <div class="search-results-area">
+    <!--search results here-->
+        <div>
+            <h4>Host: </h4>
+            <h4>Location: </h4>
+            <h4>Date: </h4>
+            <h4>Price: </h4>
+            <h4>Description: </h4>
+        </div>
+
+    </div>
 
 
 </body>
