--- a/PlanIFYweb/PlanIFYweb/static/css/main.css
+++ b/PlanIFYweb/PlanIFYweb/static/css/main.css
@@ -1,12 +1,11 @@
 
 div.header-container{
     background-color: rgb(0, 174, 255);;
-    padding-top: 10px;
+    padding-top: 5px;
     padding-bottom: 1px;
     }
 div.nav-bar{
     background-color: rgb(0, 174, 255);;
-    padding-bottom: 20px;
     position:fixed;
     top: 0;
     width: 100%;
@@ -15,15 +14,19 @@ div.nav-bar{
     
 }
 a.navlink{
+    color: white;
     position: relative;
     left: 10px;
-    padding: 10px;
-    margin: 2px;
+    padding: 5px;
     width: 100px;
     border: 2px solid;
-    text-decoration: none;
-    font-family: Arial;
-    font-size: 24;
+    border-radius: 5px;
+    border-color: black;
+    color: white;
+    text-align: center;
+    display: inline-block;
+    background-color: rgb(111, 103, 103);
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 a.navlink:hover{
@@ -57,20 +60,6 @@ a.logout-btn:hover{
 .action-button-list{
     background-color: aliceblue;
 }
-.new-event-button{
-    width: 150px;
-    height: 50px;
-    border-radius: 10px;
-    border: 2px solid rgb(25, 223, 75);
-    background-color: rgb(47, 255, 106);
-    text-align: center;
-
-    margin-top: 1%;
-    margin-left: 1%;
-}
-.new-event-button:hover{
-    background-color: rgb(47, 238, 26);
-}
 
 
 /*Home page event list*/
@@ -95,8 +84,26 @@ padding-top: 2%;
 .new-event-dialog{
     border-radius: 5px;
 }
+/*Dashboard buttons*/
+.dashboard-button{
+    color: white;
+    position: relative;
+    left: 10px;
+    padding: 10px;
+    width: 100px;
+    border: 2px solid;
+    border-radius: 5px;
+    border-color: black;
+    color: white;
+    text-align: center;
+    display: inline-block;
+    background-color: rgb(111, 103, 103);
+    font-family: Arial, Helvetica, sans-serif;
+}
 
-
+.dashboard-button:hover{
+    background-color: rgb(0, 213, 0);
+}
 /*Event cards*/
 .athlete-list{
     border-color: black solid;
