added calculated fields

--- a/PlanIFYweb/PlanIFYWOD/templates/PlanIFYweb/dashboard.html
+++ b/PlanIFYweb/PlanIFYWOD/templates/PlanIFYweb/dashboard.html
@@ -55,7 +55,7 @@
                         <div class="event-info-div">
                             <div>
                                 <h2>{{event.event_name}} : {{event.event_date}}</h2>
-                                <h2>Days Until: {{ event.DaysUntilEvent }}</h2>
+                                <h2>Days Until: {{ event.daystoevent }}</h2>
                                 <p>{{event.event_description}}</p>
                             </div>
                         </div>
