--- a/PlanIFYweb/PlanIFYWOD/templates/PlanIFYweb/eventprepare.html
+++ b/PlanIFYweb/PlanIFYWOD/templates/PlanIFYweb/eventprepare.html
@@ -39,7 +39,7 @@
         {% if athletes %}
         <ol>
             {% for athlete in athletes %}
-            <li> {{athlete.first_name}} {{athlete.last_name}}</li>
+            <li> {{athlete.first_name_of_participant}} {{athlete.last_name_of_participant}}</li>
             {% endfor %}
         </ol>
     {% else %}
