--- a/PlanIFYweb/PlanIFYWOD/templates/PlanIFYweb/eventprepare.html
+++ b/PlanIFYweb/PlanIFYWOD/templates/PlanIFYweb/eventprepare.html
@@ -19,6 +19,7 @@
                 <li>Speeches</li>
                 <li>Assistant coordinators</li>
                 <li>Station location(s) and setup</li>
+                <li>Personality conflicts</li>
 
             </ul>
         </p>
@@ -26,6 +27,7 @@
     <div>
         <h2>Workout List</h2>
         <button>Print Workouts</button>
+        <button id="plan-heat">Plan Heats</button>
         <button>Print Judge Forms</button>
         <ol>
             {% for workout in workoutlist %}
@@ -37,14 +39,15 @@
     <div>
         <h2>Participants</h2>
         {% if athletes %}
-        <ol>
             {% for athlete in athletes %}
-            <li> {{athlete.first_name_of_participant}} {{athlete.last_name_of_participant}}</li>
+            <div class="athlete-list-main" id="athlete-list-main" style="border: 1px solid black; width: 18%; margin: 5px;"> {{athlete.first_name_of_participant}} {{athlete.last_name_of_participant}}</div>
             {% endfor %}
-        </ol>
+        
     {% else %}
     <h3>No registered participants yet.</h3>
     {% endif%}
+
+
     </div>
     <div>
         <h2>Judges and Help</h2>
@@ -62,8 +65,65 @@
     <div>
         <h2>Facility layout and Stations</h2>
     </div>
-</body>
 
+    <dialog id="heat-planning" style="width: 75%; height: 80%;">
+        <div class="frame" style="columns: 2;">
+            <div>
+                <H3>Athletes</H3>
+                <div class="athlete-list" style="border: 1px solid black; width: 100%; height: 500px;" ondrop="drop(event)" ondragover="allowDrop(event)" ondragstart="drag(event)">
+                    {% if athletes %}
+                    {% for athlete in athletes %}
+                    <div class="list-item" id="list-item" style="border: 1px solid black; width: 18%; margin: 5px;" draggable="true" ondragstart="drag(event)"> {{athlete.first_name_of_participant}} {{athlete.last_name_of_participant}}</div>
+                    {% endfor %}
+                
+                    {% else %}
+                    <div class="list-item" id="list-item" style="border: 1px solid black; width: 18%; margin: 5px;" draggable="false"> None</div>
+                    {% endif %}
+
+                </div>
+            </div>
+            <div>
+                <h3>Heats</h3>
+                <div class="heat-list" style="border: 1px solid black; width: 100%; height: 100%; height: 500px;">
+                    <button id="add-heat">Add Heat</button>
+                    <div id="heats">
+                    </div>
+                </div>
+            </div>           
+
+        </div>
+    </dialog>
+</body>
+<script>
+    const plan_heat = document.getElementById("plan-heat");
+    const heat_plan = document.getElementById("heat-planning");
+    const add_heat = document.getElementById("add-heat");
+    const heats = document.getElementById("heats");
+    let heatcount = 1;
+
+    add_heat.addEventListener('click', ()=>{
+        heats.innerHTML += `<div style="border: 1px solid black; width: 90%; margin: 5px;" ondrop="drop(event)" ondragover="allowDrop(event)" ondragstart="drag(event)">Heat: ${heatcount}</div>`;
+        heatcount += 1;
+    })
+
+    plan_heat.addEventListener('click', ()=>{
+        heat_plan.showModal();
+    })
+
+    function allowDrop(ev) {
+  ev.preventDefault();
+}
+
+function drag(ev) {
+  ev.dataTransfer.setData("text", ev.target.id);
+}
+
+function drop(ev) {
+  ev.preventDefault();
+  var data = ev.dataTransfer.getData("text");
+  ev.target.appendChild(document.getElementById(data));
+}
+</script>
 
 
 
